Fix Calendar background on mobile

--- a/src/plugins/calendar.scss
+++ b/src/plugins/calendar.scss
@@ -1,6 +1,7 @@
 #calendar-container {
   --color-text-today: var(--color-accent);
   padding: 0;
+  background-color: transparent;
 
   .title {
     font-size: var(--font-ui-large);
